fixed spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -222,6 +222,7 @@ h5 {
 }
 .nav-links {
   float: right;
+  margin-top:5%;
 }
 .nav-link {
     display: inline-block;
@@ -949,6 +950,7 @@ p {
   font-family: myFirstFont;
   color: #641B36;
   font-size: 1.625rem;
+  top:-75px;
 }
 
 /*
@@ -1174,12 +1176,14 @@ p {
   width: 70%;
   padding-left: 10%;
   padding-right: 20%;
+  padding-top:5%;
 }
 #prototyping-square-button {
   height: 80%;
   width: 70%;
   padding-left: 20%;
   padding-right: 10%;
+  padding-top:5%;
 }
 #prototyping-light-logo {
   width: 50%;
